--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -1,6 +1,9 @@
-<html>
-<body>
-    <p>Hi there!</p>
-    <p>It works!</p>
-</body>
-</html>
+{% extends 'store/base.html' %}
+
+{% block content %}
+	{% for product in products %}
+		<div>
+			<h2><a href="{% url 'product' pk=product.id %}">{{ product.name }}</a></h2>
+		</div>
+	{% endfor %}
+{% endblock %}
