--- a/store/templates/store/productPage.html
+++ b/store/templates/store/productPage.html
@@ -1,5 +1,5 @@
-<html>
-<body>
-    <p>Hi there!</p>
-</body>
-</html>
+{% extends 'store/base.html' %}
+
+{% block content %}
+<p>{{ product.name }}</p>
+{% endblock %}
