--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -2,8 +2,10 @@
 
 {% block content %}
 	{% for product in products %}
-		<div>
+		<div class="product">
 			<h2><a href="{% url 'product' pk=product.id %}">{{ product.name }}</a></h2>
+			<p> {{ product.description }} </p>
+			<h3>${{ product.price }}</h3>
 		</div>
 	{% endfor %}
 {% endblock %}
