--- a/store/templates/store/addProductPage.html
+++ b/store/templates/store/addProductPage.html
@@ -4,6 +4,6 @@
     <h2>New Product</h2>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Purchase</button>
+        <button type="submit" class="save btn btn-default">Add</button>
     </form>
 {% endblock %}
