--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -1,6 +1,10 @@
 {% extends 'store/base.html' %}
 
 {% block content %}
+	{% if user.is_authenticated %}
+	<h3>Add products<a href="{% url 'add' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a></h3>
+	<h3>Fulfill orders<a href="{% url 'fulfillment' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a></h3>
+	{% endif %}
 	{% for product in products %}
 		<div class="block">
 			<h2><a href="{% url 'product' pk=product.id %}">{{ product.name }}</a></h2>
