--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -11,6 +11,9 @@
 			<h2><a href="{% url 'product' pk=product.id %}">{{ product.name }}</a></h2>
 			<p> {{ product.description }} </p>
 			<h3>${{ product.price }}</h3>
+			<div class = "text-center">
+					<img src="{{ product.image }}" style="width:150px; height:125px;">
+			</div>
 			{% if user.is_authenticated %}
 				<h2 class="text-right"><a href="{% url 'edit' pk=product.id %}"><span class="glyphicon glyphicon-edit"></span></a></h2>
 			{% endif %}
